--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "barryvdh/laravel-dompdf": "^2.0",
         "darkaonline/l5-swagger": "8.1.*",
         "guzzlehttp/guzzle": "^7.2",
         "intervention/image": "^3.2",
