--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "barryvdh/laravel-dompdf": "^2.0",
         "darkaonline/l5-swagger": "8.1.*",
         "guzzlehttp/guzzle": "^7.2",
+        "infyomlabs/laravel-ui-adminlte": "^5.2",
         "intervention/image": "^3.3",
         "laravel-views/laravel-views": "^2.4",
         "laravel/framework": "^10.0",
