--- a/storage/app/public/.gitignore
+++ b/storage/app/public/.gitignore
@@ -5,4 +5,6 @@
 !downloads
 !downloads/CFW_Template.xlsx
 !downloads/server.bat
+!downloads/update.bat
+!downloads/backup.bat
 !downloads/qrcode.png
