--- a/composer.json
+++ b/composer.json
@@ -9,19 +9,20 @@
         "barryvdh/laravel-dompdf": "^2.0",
         "darkaonline/l5-swagger": "8.1.*",
         "guzzlehttp/guzzle": "^7.2",
+        "intervention/image": "^2.5",
         "laravel-views/laravel-views": "^2.4",
         "laravel/framework": "^10.0",
-        "laravel/sanctum": "^3.2",
+        "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "maatwebsite/excel": "^3.1",
         "simplesoftwareio/simple-qrcode": "^4.2",
         "yajra/laravel-datatables-buttons": "^10.0",
         "yajra/laravel-datatables-oracle": "^10.3.1",
-        "zircote/swagger-php": "3.3.7",
-        "intervention/image": "^2.5"
+        "zircote/swagger-php": "3.3.7"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
+        "laravel/breeze": "^1.29",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.18",
         "mockery/mockery": "^1.4.4",
